--- a/src/index.less
+++ b/src/index.less
@@ -38,7 +38,7 @@
   letter-spacing: -0.01em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 80vh;
+  height: 100%;
   // Softer layered background with subtle gradients
   &::before {
     content: '';
