--- a/src/layout/layout.less
+++ b/src/layout/layout.less
@@ -206,6 +206,16 @@
       background-color: var(--klinecharts-pro-hover-background-color);
       color: var(--klinecharts-pro-text-color);
     }
+
+    @media (max-width: 768px) {
+      width: 28px;
+      height: 28px;
+      
+      svg {
+        width: 16px;
+        height: 16px;
+      }
+    }
   }
 
   &__dropdown {
